force-app/main/default/objects/Order/fields/FOPS_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>