force-app/main/default/objects/Order/fields/FOPS_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Balance_Due__c</fullName>
    <label>Balance Due</label>
    <formula>TotalAmount - FOPS_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>