force-app/main/default/objects/Order/fields/FOPS_Credit_Note_For__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Credit_Note_For__c</fullName>
    <label>Credit Note For</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>FOPS_CreditNotes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>