force-app/main/default/objects/Order/fields/FOPS_Days_Overdue__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Days_Overdue__c</fullName>
    <label>Days Overdue</label>
    <formula>IF(AND(NOT(ISBLANK(FOPS_Due_Date__c)), FOPS_Due_Date__c &lt; TODAY()), TODAY() - FOPS_Due_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>