force-app/main/default/objects/Order/fields/FOPS_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>