force-app/main/default/objects/Order/fields/FOPS_Exchange_Rate_Used__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Exchange_Rate_Used__c</fullName>
    <inlineHelpText>FROZEN at issue. Dated rates do not apply to custom or base amounts.</inlineHelpText>
    <label>Exchange Rate Used</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>