force-app/main/default/objects/Order/fields/FOPS_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Invoice_Number__c</fullName>
    <inlineHelpText>Gapless sequential, from SequenceService. OrderNumber is NOT gapless.</inlineHelpText>
    <label>Invoice Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>