force-app/main/default/objects/Order/fields/FOPS_Period_End__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Period_End__c</fullName>
    <label>Period End</label>
    <type>Date</type>
</CustomField>