force-app/main/default/objects/Order/fields/FOPS_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Period_Start__c</fullName>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>