force-app/main/default/objects/Order/fields/FOPS_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Sent_Date__c</fullName>
    <label>Sent Date</label>
    <type>DateTime</type>
</CustomField>