force-app/main/default/objects/Order/fields/FOPS_Sent_To_Email__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Sent_To_Email__c</fullName>
    <label>Sent To Email</label>
    <type>Email</type>
</CustomField>