force-app/main/default/objects/Order/fields/FOPS_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Tax_Amount__c</fullName>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>