force-app/main/default/objects/Order/fields/FOPS_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Tax_Rate__c</fullName>
    <label>Tax Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>