force-app/main/default/objects/Order/fields/FOPS_Total_Amount_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Total_Amount_Base__c</fullName>
    <label>Total Amount (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>