force-app/main/default/objects/Order/fields/FOPS_Withholding_Tax__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Withholding_Tax__c</fullName>
    <inlineHelpText>Relevant for cross-border invoicing from Vietnam.</inlineHelpText>
    <label>Withholding Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>